<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.3.5</version>
  </parent>

  <properties>
    <!-- Nexus repo url -->
    <repo.public.url>https://nexus.monaco-gouvernement.mc/repository/public/</repo.public.url>
    <repo.releases.url>https://nexus.monaco-gouvernement.mc/repository/releases/</repo.releases.url>
    <repo.snapshots.url>https://nexus.monaco-gouvernement.mc/repository/snapshots/
    </repo.snapshots.url>

    <revision>0.0.0-SNAPSHOT</revision>
    <java.version>21</java.version>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <servicerest.version>3.0.4-SNAPSHOT</servicerest.version>
    <tika.version>3.0.0</tika.version>
    <xcb-wlib.version>1.2.0</xcb-wlib.version>
    <commons-fileupload.version>1.5</commons-fileupload.version>
    <poi-ooxml.version>5.3.0</poi-ooxml.version>
    <commons-io.version>2.17.0</commons-io.version>
    <jjwt.version>0.12.6</jjwt.version>
    <xapi.version>1.0.4</xapi.version>
    <jacoco.version>0.8.12</jacoco.version>
    <jbig2-imageio.version>3.0.4</jbig2-imageio.version>
    <vscan.version>1.0.0</vscan.version>
    <pdfbox.version>3.0.3</pdfbox.version>
  </properties>

  <groupId>mc.gouv.xaf</groupId>
  <artifactId>xaf</artifactId>
  <version>${revision}</version>
  <packaging>pom</packaging>

  <modules>
    <module>xaf-api</module>
    <module>xaf-apiclient</module>
    <module>xaf-apiclient2tiers</module>
    <module>xaf-apiclient-paiement</module>
    <module>xaf-back</module>
    <module>xaf-back-denjs</module>
    <module>xaf-back-dsp</module>
    <module>xaf-back-paiement</module>
    <module>xaf-backweb</module>
    <module>xaf-backweb-denjs</module>
    <module>xaf-caching</module>
    <module>xaf-front</module>
    <module>xaf-rio</module>
    <module>xaf-shared</module>
    <module>xaf-sup</module>
  </modules>

  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
    </dependency>
  </dependencies>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.apache.tika</groupId>
        <artifactId>tika-core</artifactId>
        <version>${tika.version}</version>
      </dependency>

      <dependency>
        <groupId>org.apache.tika</groupId>
        <artifactId>tika-parsers-standard-package</artifactId>
        <version>${tika.version}</version>
        <exclusions>
          <exclusion>
            <groupId>xml-apis</groupId>
            <artifactId>xml-apis</artifactId>
          </exclusion>
        </exclusions>
      </dependency>

      <dependency>
        <groupId>org.apache.poi</groupId>
        <artifactId>poi-ooxml</artifactId>
        <version>${poi-ooxml.version}</version>
      </dependency>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>${commons-io.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.pdfbox</groupId>
        <artifactId>pdfbox</artifactId>
        <version>${pdfbox.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <!-- https://maven.apache.org/maven-ci-friendly.html -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>flatten-maven-plugin</artifactId>
        <version>1.6.0</version>
        <configuration>
          <updatePomFile>true</updatePomFile>
          <flattenMode>resolveCiFriendliesOnly</flattenMode>
        </configuration>
        <executions>
          <execution>
            <id>flatten</id>
            <phase>process-resources</phase>
            <goals>
              <goal>flatten</goal>
            </goals>
          </execution>
          <execution>
            <id>flatten.clean</id>
            <phase>clean</phase>
            <goals>
              <goal>clean</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <executions>
          <execution>
            <id>enforce-versions</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireReleaseDeps>
                  <message>No Snapshots Allowed in RELEASE build!</message>
                  <onlyWhenRelease>true</onlyWhenRelease>
                </requireReleaseDeps>
              </rules>
              <fail>true</fail>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco.version}</version>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>nexus</id>
      <url>${repo.public.url}</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>nexus</id>
      <url>${repo.public.url}</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </pluginRepository>
  </pluginRepositories>

  <distributionManagement>
    <repository>
      <id>releases</id>
      <name>Internal Releases</name>
      <url>${repo.releases.url}</url>
    </repository>
    <snapshotRepository>
      <id>snapshots</id>
      <name>Internal Snapshots</name>
      <url>${repo.snapshots.url}</url>
    </snapshotRepository>
  </distributionManagement>

</project>
